--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
       "aws-amplify": "^5.3.4",
       "aws-sdk": "^2.1418.0",
       "langchain": "^0.0.111",
+      "moment": "^2.29.4",
       "mysql": "^2.18.1",
       "pg": "^8.4.0",
       "react": "^18.2.0",
